@@ -25,7 +25,7 @@ with contributions by:
     Nicholas J. Humfrey <njh@ecs.soton.ac.uk>
     Joel Ebel <jbebel@ncsu.edu>
     <jochen2@users.sourceforge.net>
-	Alexander Vlasov <zulu@galaradio.com>
+    Alexander Vlasov <zulu@galaradio.com>
     Mariusz Mazur <mmazur@kernel.pl>
-	<derrick@csociety.org>
+    dsk <derrick@csociety.org>
 
